# polaris_docker

./: .docker-owned  .env.example  .gitattributes  .gitignore  DEPLOY-SYNOLOGY.md  DOCKER.md  DRIFT.md  Dockerfile  README.md  docker-compose.build.yml  docker-compose.synology.yml  docker-compose.yml  docker-entrypoint.sh  docker-xvfb-wrap.sh  index.html  install.ps1  install.sh  package-lock.json  package.json  update.ps1  update.sh  vite.config.ts
.github/workflows/: image.yml
docker/: chromium-headless  font-subset-chars.txt  subset_cjk.py
scripts/: pull-ghcr-to-nas.ps1  sync-guard.ps1
src/: App.vue  style.css  tauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: feishu_bridge.mjs
src-tauri/crates/forge-codec/: Cargo.toml
src-tauri/crates/forge-codec/src/: audio.rs  encoder.rs  ffmpeg_fallback.rs  lib.rs  loudness.rs  muxer.rs
src-tauri/crates/polaris-cli/: Cargo.toml
src-tauri/crates/polaris-cli/src/: main.rs
src-tauri/src/: chat.rs  claude_md.rs  codex_proxy.rs  conv.rs  doctor.rs  echo.rs  expert.rs  feishu.rs  forge.rs  forge_capture.rs  forge_fx_safe.rs  forge_pptx.rs  forge_pptx_native.rs  forge_tts.rs  forge_video.rs  kb.rs  lib.rs  nas.rs  palette.rs  persona.rs  project.rs  provider.rs  scan.rs  sense.rs  server.rs  skills.rs  updater.rs  voice.rs  voice_asr.rs  voice_live.rs
src-tauri/src/expert/: avatars.rs  expert_docs.rs  expert_groups.rs  teams.rs
src-tauri/src/fable/: agent.rs  embed_local.rs  eval.rs  files.rs  index.rs  inventory.rs  mod.rs  ontology.rs  retrieve.rs  sched.rs
src-tauri/src/templates/experts/: GENERIC.md
src-tauri/src/templates/experts/ai/: ai-engineer.md  ml-engineer.md  prompt-engineer.md
src-tauri/src/templates/experts/data/: data-analyst.md  data-engineer.md  data-scientist.md  database-architect.md  database-optimizer.md  dataviz-storyteller.md  vector-db-engineer.md
src-tauri/src/templates/experts/devops/: devops-engineer.md  docker-expert.md  incident-responder.md  network-engineer.md  sre-engineer.md  terraform-specialist.md
src-tauri/src/templates/experts/docs/: api-documenter.md  docs-architect.md  technical-writer.md  tutorial-engineer.md
src-tauri/src/templates/experts/frontend/: accessibility-tester.md  mobile-developer.md  nextjs-developer.md  react-specialist.md  vue-expert.md
src-tauri/src/templates/experts/language/: cpp-pro.md  embedded-systems.md  golang-pro.md  ios-developer.md  java-pro.md  kotlin-specialist.md  python-pro.md  rust-pro.md  sql-pro.md  typescript-pro.md
src-tauri/src/templates/experts/marketing/: content-marketer.md  copywriter.md  growth-hacker.md  pitch-coach.md  seo-specialist.md  social-media-manager.md  visual-designer.md
src-tauri/src/templates/experts/orchestration/: chief-strategist.md
src-tauri/src/templates/experts/product/: financial-modeler.md  growth-experimenter.md  pricing-strategist.md  product-manager.md  ux-researcher.md
src-tauri/src/templates/experts/quality/: code-reviewer.md  debugger.md  performance-engineer.md  refactoring-specialist.md  test-automator.md
src-tauri/src/templates/experts/research/: competitive-analyst.md  deep-research.md  market-researcher.md  trend-analyst.md
src-tauri/src/templates/experts/security/: compliance-privacy.md  privacy-engineer.md  security-auditor.md  threat-modeling-expert.md
src-tauri/src/templates/experts/specialty/: browser-automation.md  fintech-engineer.md  game-developer.md  legacy-modernizer.md
src-tauri/src/templates/experts/system/: api-contract-designer.md  architecture-advisor.md  backend-architect.md  cloud-architect.md  frontend-architect.md  kubernetes-architect.md  platform-engineer.md
src-tauri/src/templates/personas/teams/: creative.md
src-tauri/src/templates/skills/: brainstorming.md  code-review.md  docker-deploy.md  frontend-ui.md  gh-cli.md  git-commit.md  pptx.md  rest-api-design.md  security-audit.md  sql-optimization.md  systematic-debugging.md  tech-writing.md  unit-testing.md  verification-before-done.md  writing-plans.md
src-tauri/src/templates/skills/browser-use/: SKILL.md
src-tauri/src/templates/skills/browser-use/scripts/: browser_use_runner.py
src-tauri/src/templates/skills/polaris-deck-studio/: SKILL.md  design.md
src-tauri/src/templates/skills/polaris-deck-studio/assets/: base.css  motion.css  motion.js  runtime.js
src-tauri/src/templates/skills/polaris-deck-studio/scripts/: export-pptx.mjs  install-deps.mjs
src-tauri/src/templates/skills/polaris-video-studio/scripts/: find-browser.mjs  install-deps.mjs
src-tauri/src/templates/skills/polaris-video-studio/scripts/pipeline/: 03-record.mjs
src-tauri/src/templates/skills/polaris-web-studio/: SKILL.md
src-tauri/src/templates/skills/turbo-download/: SKILL.md
src-tauri/src/templates/skills/turbo-download/references/: aria2_flags.md
src-tauri/src/templates/skills/turbo-download/scripts/: fast_download.py
src-tauri/src/templates/skills/wechat-md-typesetter/: SKILL.md
src-tauri/src/templates/skills/wechat-md-typesetter/scripts/: wechat_yiban.py
src-tauri/src/templates/skills/wechat-tasks/: SKILL.md
src-tauri/src/templates/skills/wechat-tasks/scripts/: wx_config.example.json  wx_daily.py  wx_setup.py
src/components/: AddProviderModal.vue  ArtifactEditor.vue  Automation.vue  ChatPanel.vue  ClaudeMdPanel.vue  CommandPalette.vue  DeckStudio.vue  EnvDoctor.vue  ExpertCenter.vue  ExpertTeam.vue  ExpertTeamStudio.vue  FeishuSettings.vue  FileCenter.vue  KnowledgeGraph.vue  McpConfigModal.vue  MediaOps.vue  NasManager.vue  OnboardingWizard.vue  ProviderDock.vue  RightDrawer.vue  SenseApi.vue  Settings.vue  Sidebar.vue  SkillCenter.vue  TaskCenter.vue  UpdateBanner.vue  UpdatePanel.vue  VideoCourseStudio.vue  VoiceSettings.vue  WebStudio.vue  WikiBrowse.vue
src/composables/: useUpdater.ts
src/features/sandbox/components/: SandboxStatus.vue
src/lib/: markdown.ts  slidesSpec.ts
src/stores/: app.ts  artifacts.ts  automation.ts  chat.ts  fileTasks.ts  kb.ts  providers.ts  wizard.ts  workflows.ts
tools/: polaris-supervisor.ps1
