# ═══════════════════════════════════════════════════════════════
# Cargo workspace —— 板块化架构 (架构重构 Phase 0)
# 根包 polaris-app = host (宿主, 仅装配)；各板块为 crates/ 下独立 crate。
# 跨板块只依赖 polaris-core 契约，可 `cargo test -p <板块>` 独立测试。
# ═══════════════════════════════════════════════════════════════
[workspace]
members = ["crates/*", "crates/forge-codec"]
resolver = "2"

[package]
name = "polaris-app"
version = "1.0.0"
description = "Polaris - 本地优先 AI 工作台 (MVP)"
authors = ["winner3388"]
edition = "2021"
# 有两个 bin(polaris-app 桌面 / polaris-server Docker)，`cargo run`(tauri dev) 默认跑桌面壳
default-run = "polaris-app"

[lib]
name = "polaris_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ── 桌面外壳依赖：全部 optional，仅在 `desktop` feature 下编译 ──
# Docker(server) 构建用 `--no-default-features --features server`，不拉 tauri，
# 因此无需 Linux 上的 webkit2gtk-dev/libsoup 等系统库即可编译同一份源码。
tauri = { version = "2.1", features = [], optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }
tauri-plugin-fs = { version = "2.0", optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }
# 自动更新（GitHub Releases 托管）+ 重启（更新后自重启生效）
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
# ── Docker(server) 外壳依赖：仅在 `server` feature 下编译 ──
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# 自动更新「防卡死」用：停滞看门狗(time::sleep) + 与下载 future 竞速(select!)。
# tokio 本就随 tauri 编进来了，这里只是显式开 time/macros 两个 feature；与 Codex 那条
# 「无 tokio 的 ureq 同步流」互不影响。
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "sync", "net", "io-util", "signal"] }
walkdir = "2"
once_cell = "1"
directories = "5"
parking_lot = "0.12"
regex = "1"
# libc 给 Unix 平台 forge_capture::kill_tree 用;Windows 编译期不进 cfg(unix) 路径
# 不放 [target.cfg(unix)] 段避免与 chromiumoxide 同段冲突,加 cfg_attr 让 windows 编译期归零
libc = { version = "0.2", features = [] }

# 板块 crate (架构重构 Phase 0–1)
polaris-core = { path = "crates/polaris-core" }
# sandbox 含 #[tauri::command]，依赖 tauri → 仅桌面构建编译；
# Docker 内「Docker-in-Docker」沙箱本期降级（dispatch 层给 stub）。
polaris-sandbox = { path = "crates/polaris-sandbox", optional = true }
# Forge codec 板块:openh264-rs + 自写 BMFF muxer + ebur128 + cosmic-text + symphonia + audiopus
# 替 ffmpeg CLI;二进制增量 3.3-5MB;详 workspace/research-notes/task-b.md
polaris-forge-codec = { path = "crates/forge-codec" }
# 文件转换 (板块② 上传/入库) — 纯 Rust，无需 pdfium.dll 等原生绑定
# clean-room 自写转换逻辑，仅这些底层解析库为第三方
zip = "8.6.0"          # docx/pptx/xlsx 本质是 zip+xml，解压取 XML
calamine = "0.35.0"    # xlsx/xls/ods 表格 → markdown
pdf-extract = "0.10.0" # pdf 文本抽取（纯 Rust，panic 由 convert::guard 兜住）
# Codex(ChatGPT) OAuth Device Code 流程 —— 同步阻塞 HTTP 客户端 (rustls, 无 tokio)。
# 只用于授权三步: 取设备码 / 轮询 / code 换 token。比 cc-switch 的 reqwest+tokio 轻得多。
ureq = { version = "2", features = ["json"] }
# 「聊天机器人」板块「扫码创建机器人」: 把飞书开放平台建应用 URL 编码成二维码 (SVG)。
# default-features=false → 不拉重型 image crate, 只保留纯 Rust 的 svg 渲染。
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# ── Forge 工业级化阶段 1:chromiumoxide 持久 CDP 替「每帧起 chromium CLI 进程」 ──
#   提速 6-10×(单页 350-900ms → 50-120ms);双选型 chromiumoxide 主路 + headless_chrome 兜底
#   pin minor 版本:0.9.x API 仍在动(issue 标 "Regression from 0.8 to 0.9")
#   chromiumoxide Linux 需 libdbus-1-dev(Dockerfile 阶段2 装);mac/Win 自带
#   feature:默认 + 截图 + serde_json(chromiumoxide 自动拉)
chromiumoxide = { version = "=0.9.1", default-features = false }
# headless_chrome 二选型,作 fallback tier2
headless_chrome = { version = "1.0", default-features = false, optional = true }
# 图像字节级处理(forge_pptx 流式写无需 image crate,本条仅 codec 板块用,留 polaris-forge-codec)
# image = { version = "0.25", default-features = false, optional = true }
# audio 解码(symphonia) + 编码(audiopus)+ 响度(ebur128)+ 字幕(cosmic-text)
# 全在 polaris-forge-codec crate 内部依赖,主 crate 不直接拉,避免 binary 膨胀

# 原生标题栏染色（titlebar.rs）：Win11 DwmSetWindowAttribute 让标题栏随主题与框面同色
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[features]
default = ["desktop"]
# 桌面构建：Tauri 外壳 + 各插件 + 沙箱板块 + 自定义协议。
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:polaris-sandbox",
    "dep:headless_chrome",   # forge_capture fallback tier2(可选)
    "custom-protocol",
]
custom-protocol = ["tauri?/custom-protocol"]
# Docker/Web 构建：axum HTTP/WS 外壳，复用全部 Rust 引擎，不含 Tauri。
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures-util"]

# server 二进制：浏览器前端 + REST/WS 后端（替代 Tauri 外壳）。
# 构建：cargo build --release --bin polaris-server --no-default-features --features server
# 注意:不能写 required-features = ["server"] —— tauri-cli 的 bundler 会把包里
# 所有 [[bin]] 打进安装包且不看 required-features,desktop 构建因找不到
# polaris-server 而 bundling 失败(v1.0.0 双平台 CI 实测)。去掉后 desktop
# 按默认特性把它编成 cfg(not(server)) 的极小 stub,bundler 能找到文件;
# Docker 仍用 --features server 出真服务端。
[[bin]]
name = "polaris-server"
path = "src/bin/polaris-server.rs"

# polaris-forge —— Forge 渲染引擎 CLI（preflight/spec-pptx/pptx/shot/pack/video/tts/validate）。
# 容器内 agent 直接命令行出片;slim 镜像也能跑 spec-pptx(原生 OOXML,零浏览器)。
# 同样不写 required-features(理由见上 polaris-server)：default 特性下 forge 函数恒在,
# 编成可运行 CLI;Docker 用 --features server 显式 --bin polaris-forge 构建。
[[bin]]
name = "polaris-forge"
path = "src/bin/polaris-forge.rs"

# 桌面二进制保持默认（main.rs）。
[[bin]]
name = "polaris-app"
path = "src/main.rs"

# ═══════════════════════════════════════════════════════════════
# Release 体积优化 — 工业级减负配置
# ═══════════════════════════════════════════════════════════════
[profile.release]
opt-level = 3          # 最高优化级别
lto = true             # 链接时优化，合并所有 crate
codegen-units = 1      # 单 codegen unit，最大化优化
# 用 unwind（非 abort）：第三方解析库（pdf-extract/calamine…）遇坏文件可能 panic，
# convert::guard 用 catch_unwind 在命令边界兜成 Err，避免单个坏文件崩掉整个 app。
panic = "unwind"
strip = true           # 自动剥离符号表

# 进一步缩减：移除断言和溢出检查（仅 release）
[profile.release.package."*"]
opt-level = 3

# server(Docker) 二进制专用：继承 release 的优化，但关掉 LTO + 放开 codegen-units，
# 大幅缩短镜像构建时间。server 不是 CPU 密集型（重活在 spawn 的 claude CLI），
# 关 LTO 对运行性能几乎无影响，却能把 Docker 里的最终链接从数分钟降到数十秒。
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = true
